--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./CSS/style.css">
     <title>Bootcamp DNC</title>
 </head>
 <body>
+    <nav>
+        <div>
+            <a href="">Home</a>
+            <a href="">Utimas edições</a>
+            <a href="">Requisitos para participar</a>
+        </div>
+    </nav>
     
 </body>
 </html>
