Nav bar creation

--- a/index.html
+++ b/index.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootcamp DNC</title>
-</head>
-<body>
-    <div class="">
-
-    </div>
-=======
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hubballi&family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <title>Bootcamp DNC</title>
 </head>
 <body>
-    <nav>
-        <div>
+    <nav id="principal">
+        <div id="menu">
             <a href="">Home</a>
             <a href="">Utimas edições</a>
             <a href="">Requisitos para participar</a>
         </div>
+        <button type="submit">Login</button>
     </nav>
     
->>>>>>> 0e1866990a0ca5f31895f853bc833e0200018c38
 </body>
 </html>
